# xaxxon_openlidar

./: CMakeLists.txt  README.md  default_params.yaml  lidar.rviz  package.xml  rvizlidar  setup.cfg  setup.py
cfg/: XaxxonOpenLidar.cfg
firmware/: xaxxon_openlidar.ino
launch/: lidarbroadcast.launch.py  xaxxon_openlidar.launch
nodes/: lidarbroadcast.py  usbdiscover.py
xaxxon_openlidar/: lidarbroadcast.py  usbdiscover.py
