<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>xaxxon_openlidar</name>
  <version>0.1.0</version>
  <description>ROS2 Drivers for the Xaxxon OpenLIDAR Sensor</description>
  <maintainer email="colin@xaxxon.com">colin adamson</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
